--- a/inst/draft/references.bib
+++ b/inst/draft/references.bib
@@ -1,18 +1,52 @@
 % -----------------------------------------------------------------------------
-@article{gruen2008,
-   author = {Bettina Gr\"un and Friedrich Leisch},
-   title = {FlexMix Version 2: Finite Mixtures with Concomitant Variables and Varying and Constant Parameters},
+@article{leisch2004,
+   author  = {Leisch, Friedrich},
+   title   = {{F}lex{M}ix: A General Framework for Finite Mixture Models and Latent Class Regression in R},
    journal = {Journal of Statistical Software, Articles},
-   volume = {28},
-   number = {4},
-   year = {2008},
-   issn = {1548-7660},
-   pages = {1--35},
-   doi = {10.18637/jss.v028.i04},
-   url = {https://www.jstatsoft.org/v028/i04}
+   volume  = {11},
+   number  = {8},
+   year    = {2004},
+   issn    = {1548-7660},
+   pages   = {1--18},
+   doi     = {10.18637/jss.v011.i08},
+   url     = {https://www.jstatsoft.org/v011/i08}
 }
 % -----------------------------------------------------------------------------
+@article{gruen2008,
+   author  = {Gr\"un, Bettina and Leisch, Friedrich},
+   title   = {FlexMix Version 2: Finite Mixtures with Concomitant Variables and Varying and Constant Parameters},
+   journal = {Journal of Statistical Software, Articles},
+   volume  = {28},
+   number  = {4},
+   year    = {2008},
+   issn    = {1548-7660},
+   pages   = {1--35},
+   doi     = {10.18637/jss.v028.i04},
+   url     = {https://www.jstatsoft.org/v028/i04}
+}
 % -----------------------------------------------------------------------------
+@article{plavcan2014,
+    author  = {Plavcan, David and Mayr, Georg J. and Zeileis, Achim},
+    title   = {Automatic and Probabilistic Foehn Diagnosis with a Statistical Mixture Model},
+    journal = {Journal of Applied Meteorology and Climatology},
+    volume  = {53},
+    number  = {3},
+    pages   = {652--659},
+    year    = {2014},
+    doi     = {10.1175/JAMC-D-13-0267.1},
+    URL     = {https://doi.org/10.1175/JAMC-D-13-0267.1}
+}
+% -----------------------------------------------------------------------------
+@book{mccullagh1989,
+  author    = {McCullagh, P. and Nelder, J.A.},
+  year      = {1989},
+  title     = {Generalized Linear Models},
+  edition   = {2},
+  isbn      = {9780412317606},
+  lccn      = {99013896},
+  series    = {Chapman \& Hall/CRC Monographs on Statistics \& Applied Probability},
+  publisher = {Taylor \& Francis}
+}
 % -----------------------------------------------------------------------------
 % -----------------------------------------------------------------------------
 % -----------------------------------------------------------------------------
