--- a/inst/draft/draft.tex
+++ b/inst/draft/draft.tex
@@ -79,12 +79,20 @@ here. Just to leave/include some references:
 \textit{Note by Reto:}
 The original publication (\code{FlexMix}, \citealt{gruen2008})
 provides general framework for flexible mixture models for multiple
-clusters. For this application we will concentrate on the special
-case with only two distinct clusters ($K = 2$).
+components. For this application we will concentrate on the special
+case with only two distinct components ($K = 2$).
 
 \subsection{Finite mixture models}
 
-The finite mixture model in its general form is given by
+Finite mixture models are a general model class of finite
+mixtures of regression models. It is assumed that the mixture
+consists of a set of $K$ distinct components, each described by
+a parametric distribution.
+In addition, an weight is assigned to each of the $K$ classes
+for each observation which describes the a-priori probability
+for an observation to come from this component.
+These weights can depend on multiple covariates which are
+referred to as \textit{concomitant} variables.
 
 \begin{equation}
     h(\mathit{y} | \mathit{x}, \mathit{\omega}, \mathit{\alpha}, \mathit{\theta}) =
@@ -96,9 +104,9 @@ The finite mixture model in its general form is given by
 where $\mathit{\theta}$ and $\mathit{\alpha}$ denote the parameters for the
 mixture density $h()$. $\mathit{y}$ denotes the response, $\mathit{x}$ the
 predictor variable (one single variable) and $\mathbf{\omega}$ the concomitant
-variables (multiple variables allowed) for the probability model.
+variables for the probability model.
 
-For the special case of a finite mixture model with $K=2$ Gaussian clusters
+For the special case of a finite mixture model with $K=2$ Gaussian components
 the specification as shown in Equation~\ref{eqn:flexmix-density-general} simplifies to
 
 \begin{equation}
@@ -106,20 +114,35 @@ the specification as shown in Equation~\ref{eqn:flexmix-density-general} simplif
         \underbrace{
             (1 - \mathit{\pi}(\mathbf{\omega}, \mathit{\alpha})) \cdot
             \phi(\mathit{y} | \mathit{\theta}_1, \mathit{x})
-        }_{\text{cluster 1}}
+        }_{\text{component 1}}
         \cdot
         \underbrace{
             \mathit{\pi}(\mathbf{\omega}, \mathit{\alpha}) \cdot \phi(\mathit{\theta}_2|\mathit{x})
-        }_{\text{cluster 2}}
+        }_{\text{component 2}}
     \label{eqn:flexmix-density-gaussian}
 \end{equation}
 
 where $\phi()$ is the probability function of the Gaussian distribution.
 The concomitant model for $\pi()$ reduces to a binomial problem as the probability
-for a specific observation $y_i$ to be observed in the first cluster is the
-counter probability of $y_i$ being observed in the second cluster.
+for a specific observation $y_i$ to be observed in the first component is the
+counter probability of $y_i$ being observed in the second component.
 Thus, for $\pi()$ any type of binomial model can be used which satisfies
 that $\pi \in [0,1] \forall i=1,\dots,N$.
+Figure~\ref{fig:schematic_density} shows an example of a finite mixture model with
+two Gaussian components with fixed $\mathit{\theta}$ coefficients but different
+weights or a-priori probabilities $\tilde{p}_k$.
+
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width = .8\textwidth]{draft_schematic_density}
+    \caption{Schematic representation of the finite mixture model density
+    (shaded; red dashed line) and the two Gaussian components (black/gray). 
+    $\tilde{p}_1$ and $\tilde{p}_2$ are the a-prior weights for the components.
+    The dashed lines always show the distribution of the component with equal
+    and constant weights of $\tilde{p}_1 = \tilde{p}_2 = 0.5$.}
+    \label{fig:schematic_density}
+\end{figure}
 
 One frequently used model for a binary response is the binomial logistic regression
 model or binomial logit model (BLM), however, any appropriate binomial probability
@@ -132,7 +155,7 @@ The BLM is defined as follows:
 \end{equation}
 
 where $\mathit{\pi}$ is the probability that an observation belongs to the
-second cluster (Eqn.~\ref{eqn:flexmix-density-gaussian}).
+second component (Eqn.~\ref{eqn:flexmix-density-gaussian}).
 The probabilities are modelled using multilinear regression
 $\mathit{\omega}^\top \mathit{\alpha}$ with $p=1,\dots,P$ concomitant
 variables $\mathit{\omega}$ times the corresponding parameters or regression
@@ -218,7 +241,7 @@ is shown in Algorithm~\ref{alg:iwls}.
 The parameters $\mathit{\theta}$ and $\mathit{\alpha}$ of the finite mixture model
 can be estimated using a likelihood based EM algorithm (\note{citation?}).
 
-For the special case of a two-cluster Gaussian finite mixture model the estimation
+For the special case of a two-component Gaussian finite mixture model the estimation
 can be performed using iterative (re-)weighted empirical moments for the parameters
 of the Gaussian densities ($\mathit{\theta}$) and IWLS to estimate the parameters
 of the binomial logit model ($\mathit{\theta}$).
@@ -226,7 +249,7 @@ of the binomial logit model ($\mathit{\theta}$).
 
 It is assumed that an unobservable latent variable $z_i \in [0,1]$ exists
 for each observation $i=1, \dots N$ which defines the membership of the observation,
-the probability that observation $n$ comes from the second cluster.
+the probability that observation $n$ comes from the second component.
 As the membership is unknown it has to be initially guessed:
 
 \begin{equation}
@@ -239,7 +262,7 @@ As the membership is unknown it has to be initially guessed:
 \note{This $z$ is basically the initial guess of the probability!}
 
 In addition, initial values for the parameters of the two Gaussian distributions
-for cluster one and cluster two have to be estimated which are used as starting
+for component one and component two have to be estimated which are used as starting
 values for the EM procedure. The parameters $\mathit{\theta}$ are thus initialized
 as follows:
 
@@ -263,9 +286,9 @@ with $0$ (\note{find a way for better initial values}).
 The EM algorithm can be written as follows:
 
 \begin{algorithm}
-    \caption{Parameter estimation for the two-cluster Gaussian finite mixture model
+    \caption{Parameter estimation for the two-component Gaussian finite mixture model
     using iterative (re-)weighted optimization. $\Phi()$ is the cumulative distribution
-    function of the standard Gaussian distribution.}
+    function of the Gaussian distribution.}
     
     \textbf{Initialization ($j = 0$):}
     \begin{enumerate}
@@ -287,16 +310,27 @@ The EM algorithm can be written as follows:
     \textbf{EM iterations ($j = 1, \dots, J$):}
     \begin{enumerate}
 
-        \item Compute finite mixture model densities for both clusters:
-            \begin{equation*}
-                    d_1^{(j)} = (1 - \mathit{\pi}^{(j)}) \Phi\Big(\frac{\mathit{y} - \mu_1^{(j-1)}}{\sigma_1^{(j-1)}}\Big),
-                    ~~
-                    d_2^{(j)} = \mathit{\pi}^{(j)} \Phi\Big(\frac{\mathit{y} - \mu_2^{(j-1)}}{\sigma_2^{(j-1)}}\Big)
-            \end{equation*}
+        %%\item Compute finite mixture model densities for both components:
+        %%    \begin{equation*}
+        %%            d_1^{(j)} = (1 - \mathit{\pi}^{(j)}) \Phi\Big(\frac{\mathit{y} - \mu_1^{(j-1)}}{\sigma_1^{(j-1)}}\Big),
+        %%            ~~
+        %%            d_2^{(j)} = \mathit{\pi}^{(j)} \Phi\Big(\frac{\mathit{y} - \mu_2^{(j-1)}}{\sigma_2^{(j-1)}}\Big)
+        %%    \end{equation*}
+
+        %%\item Compute posterior probabilities:
+        %%    \begin{equation*}
+        %%        \tilde{\mathit{p}}^{(j)} = \frac{d_2^{(j)}}{d_1^{(j)} + d_2^{(j)}}
+        %%    \end{equation*}
 
         \item Compute posterior probabilities:
             \begin{equation*}
-                \tilde{\mathit{p}}^{(j)} = \frac{d_2^{(j)}}{d_1^{(j)} + d_2^{(j)}}
+                \tilde{\mathit{p}}^{(j)} = 
+                \frac{
+                    \mathit{\pi}^{(j-1)} \Phi(\mathit{y} | \mu_2^{(j-1)}, \sigma_2^{(j-1)})
+                }{
+                    (1 - \mathit{\pi}^{(j-1)}) \Phi(\mathit{y} | \mu_1^{(j-1)}, \sigma_1^{(j-1)}) +
+                    \mathit{\pi}^{(j-1)} \Phi(\mathit{y} | \mu_2^{(j-1)}, \sigma_2^{(j-1)})
+                }
             \end{equation*}
 
         %%%\item Compute initial log-likelihood sum:
@@ -304,17 +338,26 @@ The EM algorithm can be written as follows:
         %%%        \ell^{(j)} = \sum_{i=1}^N 
         %%%        \underbrace{
         %%%            (1 - \tilde{p}_i^{(j)}) \log(d_{1,i}^{(j)})
-        %%%        }_{\text{cluster 1}}
+        %%%        }_{\text{component 1}}
         %%%        +
         %%%        \underbrace{
         %%%            \tilde{p}_i^{(j)} \log(d_{2,i}^{(j)})
-        %%%        }_{\text{cluster 2}}
+        %%%        }_{\text{component 2}}
         %%%        +
         %%%        \underbrace{
         %%%            (1 - \tilde{p}_i^{(j)}) \log(1 - \pi_i^{(j)}) + \tilde{p}_i^{(j)} \log(\pi_i^{(j)})
         %%%        }_{\text{concomitant model}}
         %%%        \Big)
         %%%    \end{equation*}
+        \item Update $\mathit{\theta}$ using weighted empirical moments:
+            \begin{eqnarray*}
+                    \mu_1^{(j)} = \frac{\sum \mathit{x} (1 - \tilde{p}^{(j)})}{\sum (1 - \tilde{p}^{(j)})}
+                    &\text{and}&
+                    \sigma_1^{(j)} = \Big( \frac{\sum (x - \mu_1^{(j)})^2 (1 - \tilde{p}^{(j)})}{\sum(1 - \tilde{p}^{(j)})} \Big)^\frac{1}{2} \\
+                    \mu_2^{(j)} = \frac{\sum \mathit{x} \tilde{p}^{(j)}}{\sum \tilde{p}^{(j)}}
+                    &\text{and}&
+                    \sigma_2^{(j)} = \Big( \frac{\sum (x - \mu_2^{(j)})^2 \tilde{p}^{(j)}}{\sum \tilde{p}^{(j)}} \Big)^\frac{1}{2} \\
+            \end{eqnarray*}
             
         \item Update $\mathit{\theta}$ using weighted empirical moments:
             \begin{equation*}
@@ -341,14 +384,14 @@ The EM algorithm can be written as follows:
         \item Evaluate log-likelihood given the new parameters $\mathit{\alpha}$ and $\mathit{\theta}$
             as well as the updated posterior probabilities $\mathit{\tilde{p}}$:
             \begin{equation*}
-                \ell^{(j)} = \sum_{i=1}^N 
+                \ell^{(j)} = \sum_{i=1}^N \Big(
                 \underbrace{
                     (1 - \tilde{p}_i^{(j)}) \log(d_{1,i}^{(j)})
-                }_{\text{cluster 1}}
+                }_{\text{component 1}}
                 +
                 \underbrace{
                     \tilde{p}_i^{(j)} \log(d_{2,i}^{(j)})
-                }_{\text{cluster 2}}
+                }_{\text{component 2}}
                 +
                 \underbrace{
                     (1 - \tilde{p}_i^{(j)}) \log(1 - \pi_i^{(j)}) + \tilde{p}_i^{(j)} \log(\pi_i^{(j)})
