Updated draft and refs

--- a/inst/draft/references.bib
+++ b/inst/draft/references.bib
@@ -1,28 +1,41 @@
 % -----------------------------------------------------------------------------
 @article{leisch2004,
-   author  = {Leisch, Friedrich},
-   title   = {{F}lex{M}ix: A General Framework for Finite Mixture Models and Latent Class Regression in R},
-   journal = {Journal of Statistical Software, Articles},
-   volume  = {11},
-   number  = {8},
-   year    = {2004},
-   issn    = {1548-7660},
-   pages   = {1--18},
-   doi     = {10.18637/jss.v011.i08},
-   url     = {https://www.jstatsoft.org/v011/i08}
+    author  = {Leisch, Friedrich},
+    title   = {{F}lex{M}ix: A General Framework for Finite Mixture Models and Latent Class Regression in {R}},
+    journal = {Journal of Statistical Software, Articles},
+    volume  = {11},
+    number  = {8},
+    year    = {2004},
+    issn    = {1548-7660},
+    pages   = {1--18},
+    doi     = {10.18637/jss.v011.i08},
+    url     = {https://www.jstatsoft.org/v011/i08}
+}
+% -----------------------------------------------------------------------------
+@article{gruen2007,
+    author  = {Bettina Gr\"un and Friedrich Leisch},
+    title   = {Fitting Finite Mixtures of Generalized Linear Regressions in {R}},
+    journal = {Computational Statistics \& Data Analysis},
+    volume  = {51},
+    number  = {11},
+    pages   = {5247--5252},
+    year    = {2007},
+    issn    = {0167-9473},
+    doi     = {10.1016/j.csda.2006.08.014},
+    url     = {http://www.sciencedirect.com/science/article/pii/S0167947306002787}
 }
 % -----------------------------------------------------------------------------
 @article{gruen2008,
-   author  = {Gr\"un, Bettina and Leisch, Friedrich},
-   title   = {FlexMix Version 2: Finite Mixtures with Concomitant Variables and Varying and Constant Parameters},
-   journal = {Journal of Statistical Software, Articles},
-   volume  = {28},
-   number  = {4},
-   year    = {2008},
-   issn    = {1548-7660},
-   pages   = {1--35},
-   doi     = {10.18637/jss.v028.i04},
-   url     = {https://www.jstatsoft.org/v028/i04}
+    author  = {Gr\"un, Bettina and Leisch, Friedrich},
+    title   = {FlexMix Version 2: Finite Mixtures with Concomitant Variables and Varying and Constant Parameters},
+    journal = {Journal of Statistical Software, Articles},
+    volume  = {28},
+    number  = {4},
+    year    = {2008},
+    issn    = {1548-7660},
+    pages   = {1--35},
+    doi     = {10.18637/jss.v028.i04},
+    url     = {https://www.jstatsoft.org/v028/i04}
 }
 % -----------------------------------------------------------------------------
 @article{plavcan2014,
@@ -38,18 +51,59 @@
 }
 % -----------------------------------------------------------------------------
 @book{mccullagh1989,
-  author    = {McCullagh, P. and Nelder, J.A.},
-  year      = {1989},
-  title     = {Generalized Linear Models},
-  edition   = {2},
-  isbn      = {9780412317606},
-  lccn      = {99013896},
-  series    = {Chapman \& Hall/CRC Monographs on Statistics \& Applied Probability},
-  publisher = {Taylor \& Francis}
+    author    = {McCullagh, P. and Nelder, J.A.},
+    year      = {1989},
+    title     = {Generalized Linear Models},
+    edition   = {2},
+    isbn      = {9780412317606},
+    lccn      = {99013896},
+    series    = {Chapman \& Hall/CRC Monographs on Statistics \& Applied Probability},
+    publisher = {Taylor \& Francis}
 }
 % -----------------------------------------------------------------------------
+@article{mayr2018unpublished,
+    author  = {Mayr, Georg J. and Plavcan, David and Armi, Laurence and Elvidge, Andrew and Grisogono, Branko and Horvath, Kristian and Jackson, Peter and Neururer, Alfred and Seibert, Petra and Steenburgh, James W and Stiperski, Ivana and Sturman, Andrew and Ve\v{c}enaj, \v{Z}eljko and Vergeiner, Johannes and Vosper, Simon and Z\"ungl, G\"unther},
+    title   = {The Community Foehn Classification Experiment},
+    journal = {Bulletin of the American Meteorological Society},
+    volume  = {0},
+    number  = {0},
+    pages   = {null},
+    year    = {0},
+    doi     = {10.1175/BAMS-D-17-0200.1},
+    URL     = {https://doi.org/10.1175/BAMS-D-17-0200.1},
+}
 % -----------------------------------------------------------------------------
+@article{mayr2008,
+    author   = {Mayr, Georg J. and Armi, Laurence},
+    title    = {{F}\"ohn as a Response to Changing Upstream and Downstream Air Masses},
+    journal  = {Quarterly Journal of the Royal Meteorological Society},
+    volume   = {134},
+    number   = {635},
+    pages    = {1357--1369},
+    keywords = {gap flow, stratified flow, hydraulics, MAP},
+    doi      = {10.1002/qj.295},
+}
+% -------------------------------------------------------------------
+@article{army2011,
+    author  = {Armi, Laurence and Mayr, Georg J.},
+    title   = {The Descending Stratified Flow and Internal Hydraulic Jump in the Lee of the Sierras},
+    journal = {Journal of Applied Meteorology and Climatology},
+    volume  = {50},
+    number  = {10},
+    pages   = {1995-2011},
+    year    = {2011},
+    doi     = {10.1175/JAMC-D-10-05005.1},
+}
 % -----------------------------------------------------------------------------
+@article{armi2007,
+    author  = {Armi, Laurence and Mayr, Georg J.},
+    title   = {Continuously Stratified Flows Across an {A}lpine Crest With a Pass: Shallow and Deep F\"ohn},
+    journal = {Quarterly Journal of the Royal Meteorological Society},
+    volume  = {133},
+    number  = {623},
+    pages   = {459--477},
+    doi     = {10.1002/qj.22},
+}
 % -----------------------------------------------------------------------------
 % -----------------------------------------------------------------------------
 % -----------------------------------------------------------------------------
