Add binning now ...

--- a/inst/draft/draft.tex
+++ b/inst/draft/draft.tex
@@ -20,9 +20,9 @@
 
 \Plainauthor{Reto Stauffer, Matthias Dusch, Fabien Maussion, Georg J. Mayr}
 
-\title{phoeton: Software for Objective Probabilistic Foehn Classification}
-\Plaintitle{phoeton: Objective Probabilistic Foehn Classification}
-\Shorttitle{phoeton: Objective Probabilistic Foehn Classification}
+\title{foehnix: Software for Objective Probabilistic Foehn Classification}
+\Plaintitle{foehnix: Objective Probabilistic Foehn Classification}
+\Shorttitle{foehnix: Objective Probabilistic Foehn Classification}
 
 \Abstract{
     This is the abstract here \dots
