--- a/inst/draft/references.bib
+++ b/inst/draft/references.bib
@@ -1,3 +1,14 @@
+@article{fraley2002,
+    author    = {Chris Fraley and Adrian E Raftery},
+    title     = {Model-Based Clustering, Discriminant Analysis, and Density Estimation},
+    journal   = {Journal of the American Statistical Association},
+    volume    = {97},
+    number    = {458},
+    pages     = {611-631},
+    year      = {2002},
+    publisher = {Taylor \& Francis},
+    doi       = {10.1198/016214502760047131}
+}
 % -----------------------------------------------------------------------------
 @article{leisch2004,
     author  = {Leisch, Friedrich},
