Updated modular, moving to master now

--- a/inst/draft/references.bib
+++ b/inst/draft/references.bib
@@ -73,7 +73,7 @@
 }
 % -----------------------------------------------------------------------------
 @article{mayr2018unpublished,
-    author  = {Mayr, Georg J. and Plavcan, David and Armi, Laurence and Elvidge, Andrew and Grisogono, Branko and Horvath, Kristian and Jackson, Peter and Neururer, Alfred and Seibert, Petra and Steenburgh, James W and Stiperski, Ivana and Sturman, Andrew and Ve\v{c}enaj, \v{Z}eljko and Vergeiner, Johannes and Vosper, Simon and Z\"ungl, G\"unther},
+    author  = {Mayr, Georg J. and Plavcan, David and Armi, Laurence and Elvidge, Andrew and Grisogono, Branko and Horvath, Kristian and Jackson, Peter and Neururer, Alfred and Seibert, Petra and Steenburgh, James W and Stiperski, Ivana and Sturman, Andrew and Ve\v{c}enaj, \v{Z}eljko and Vergeiner, Johannes and Vosper, Simon and Z\"angl, G\"unther},
     title   = {The Community Foehn Classification Experiment},
     journal = {Bulletin of the American Meteorological Society},
     volume  = {0},
