--- a/inst/draft/draft.tex
+++ b/inst/draft/draft.tex
@@ -66,7 +66,7 @@ here. Just to leave/include some references:
     \item finite mixture model \citep{leisch2004,gruen2008}
     \item automatic probabilistic foehn classification \cite{plavcan2014}
     \item IWLS/IRLS \citep{mccullagh1989}
-    \item Community foehn classification experiment \cite{mayr2018unpublished}
+    \item Community foehn classification experiment \cite{mayr2018}
 \end{itemize}
 
 I would go for something like:
