--- a/inst/draft/references.bib
+++ b/inst/draft/references.bib
@@ -72,16 +72,15 @@
     publisher = {Taylor \& Francis}
 }
 % -----------------------------------------------------------------------------
-@article{mayr2018unpublished,
+@article{mayr2018,
     author  = {Mayr, Georg J. and Plavcan, David and Armi, Laurence and Elvidge, Andrew and Grisogono, Branko and Horvath, Kristian and Jackson, Peter and Neururer, Alfred and Seibert, Petra and Steenburgh, James W and Stiperski, Ivana and Sturman, Andrew and Ve\v{c}enaj, \v{Z}eljko and Vergeiner, Johannes and Vosper, Simon and Z\"angl, G\"unther},
     title   = {The Community Foehn Classification Experiment},
     journal = {Bulletin of the American Meteorological Society},
-    volume  = {0},
-    number  = {0},
-    pages   = {null},
-    year    = {0},
+    volume  = {99},
+    number  = {11},
+    pages   = {2229--2235},
+    year    = {2018},
     doi     = {10.1175/BAMS-D-17-0200.1},
-    URL     = {https://doi.org/10.1175/BAMS-D-17-0200.1},
 }
 % -----------------------------------------------------------------------------
 @article{mayr2008,
